Apply can? to views/rooms

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
-    <%= link_to "Q-Board", '#', id: "logo" %>
+    <%= link_to "Q-Board", root_path, id: "logo" %>
     <ul class="nav navbar-nav navbar-right">
 
       <% if user_signed_in? %>
