--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,32 +1,19 @@
+<h1 class="text-center"><%= link_to "All Subjects", rooms_path %></h1>
 
-
-<h1>Listing Rooms</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @rooms.each do |room| %>
-      <tr>
-        <td><%= link_to room.name, room %></td>
-        <% if can? :update, room %>
-          <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <% end %>
-        <% if can? :destroy, room %>
-          <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
+<% @rooms.each do |room| %>
+  <h3><%= link_to room.name, room %>
+    <% if can? :update, room %>
+      <span><%= link_to 'Edit', edit_room_path(room), class: "btn btn-primary" %></span>
     <% end %>
-  </tbody>
-</table>
+    <% if can? :destroy, room %>
+      <span><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></span>
+    <% end %>
+  </h3>
+<% end %>
 
+<br>
 <br>
 
 <% if can? :create, Room %>
-  <%= link_to 'New Room', new_room_path %>
+  <%= link_to 'New Room', new_room_path, class: "btn btn-primary" %>
 <% end %>
