--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -7,11 +7,13 @@
 <% end %>
 
 <br>
+<%= link_to 'New Question', new_room_question_path(@room), :class => "btn btn-primary" %>
+<br><br>
 
 <% if can? :update, @room %>
-  <%= link_to 'Edit', edit_room_path(@room) %> |
+  <%= link_to 'Edit', edit_room_path(@room), :class => "btn btn-warning" %>
 <% end %>
-<%= link_to 'Back', rooms_path %>
 
-<br>
-<%= link_to 'New Question', new_room_question_path(@room) %>
+<% if can? :destroy, @room %>
+  <%= link_to "Delete", room_path(@room), method: :delete, data: { confirm: 'Are you sure?'}, :class => "btn btn-danger" %>
+<% end %>
