--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,6 +11,14 @@
 
       <div class="media-left media-top">
         <%= link_to @question.user.username, '#'%>
+        <%= link_to like_answer_path(@answer), method: :put do %>
+          Upvote
+          <%= @answer.get_upvotes.size %>
+        <% end %>
+        <%= link_to dislike_answer_path(@answer), method: :put do %>
+          Downvote
+          <%= @answer.get_downvotes.size %>
+        <% end %>
       </div>
 
       <div class="media-body">
@@ -34,6 +42,14 @@
     <div class="media">
       <div class="media-left media-top">
         <%= link_to answer.user.username, '#' %>
+        <%= link_to like_answer_path(answer), method: :put do %>
+          Upvote
+          <%= answer.get_upvotes.size %>
+        <% end %>
+        <%= link_to dislike_answer_path(answer), method: :put do %>
+          Downvote
+          <%= answer.get_downvotes.size %>
+        <% end %>
       </div>
       <div class="media-body">
         <%= answer.content %> <br>
