--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,27 +1,5 @@
+<h1 class="text-center"><%= link_to "Tags", tags_path %></h1> <br>
 
-
-<h1>Listing Tags</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tags.each do |tag| %>
-      <tr>
-        <td><%= tag.name %></td>
-        <td><%= link_to 'Show', tag %></td>
-        <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
-        <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Tag', new_tag_path %>
+<% @tags.each do |tag| %>
+    <p class="badge"><%= link_to tag.name, tag, class: "tags-text" %></p>
+<% end %>
