--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,9 +1,21 @@
 <h3>
-  <%= link_to @tag.name, @tag %>
+  <span class="label label-default"><%= link_to @tag.name, @tag, class: "tags-text" %></span>
 </h3>
+<br>
 
-<% @questions.each do |question| %>
-  <%= link_to question.title, room_question_path(question.room_id, question) %> <br>
+<% @qas.each do |q, a| %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4><%= link_to q.title, room_question_path(q.room, q) %></h4>
+    </div>
+    <div class="panel-body">
+      <%= a.content.truncate_words(20) %> <br>
+      <% a.answer_tags.each do |answer_tag| %>
+        <span class="badge"><%= link_to Tag.find(answer_tag[:tag_id]).name, tag_path(Tag.find(answer_tag[:tag_id])), class: "tags-text" %></span>
+      <% end %>
+      <p class="pull-right">Posted at: <%= a.created_at.strftime('%v') %></p>
+    </div>
+  </div>
 <% end %>
 
 <br><br>
