--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,7 @@
-<h1>
+<h3>
   <%= link_to @question.room.name, room_path(@question.room) %>
-</h1>
+</h3>
+<br>
 
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -33,7 +34,9 @@
     Tags:
     <% @tags.each do |tag| %>
     <span class="badge"><%= link_to tag[:name], tag_path(tag), class: "tags-text"%></span>
+
     <% end %>
+    <p class="pull-right">Posted at: <%= @answer.created_at.strftime('%v')%></p>
   </div>
 </div>
 
@@ -54,7 +57,8 @@
         </div>
         <div class="media-body">
           <%= answer.content %>
-          <br>
+          <br><br>
+          <p class="pull-right">Posted at: <%= answer.created_at.strftime('%v') %></p>
         </div>
       </div>
     </div>
