--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -5,24 +5,47 @@
 
 <% @qas.each do |q, a| %>
   <div class="panel panel-default">
+
     <div class="panel-heading">
       <h4><%= link_to q.title, room_question_path(q.room, q) %></h4>
     </div>
+
     <div class="panel-body">
-      <%= a.content.truncate_words(20) %> <br>
-      <% a.answer_tags.each do |answer_tag| %>
-        <span class="badge"><%= link_to Tag.find(answer_tag[:tag_id]).name, tag_path(Tag.find(answer_tag[:tag_id])), class: "tags-text" %></span>
-      <% end %>
-      <p class="pull-right">Posted at: <%= a.created_at.strftime('%v') %></p>
+
+        <div class="media">
+
+          <div class="media-left media-top">
+            <div class="media-object">
+              <span class="badge">
+                <p class="text-center"><%= q.answers.offset(1).count %></p>
+                <p class="text-center">
+                  answers
+                </p>
+              </span>
+
+            </div>
+          </div>
+
+          <div class="media-body">
+            <%= a.content.truncate_words(20) %> <br>
+            <% a.answer_tags.each do |answer_tag| %>
+              <span class="badge"><%= link_to Tag.find(answer_tag[:tag_id]).name, tag_path(Tag.find(answer_tag[:tag_id])), class: "tags-text" %></span>
+            <% end %>
+            <p class="pull-right">Posted at: <%= a.created_at.strftime('%v') %></p>
+          </div>
+
+        </div>
+
     </div>
+
   </div>
 <% end %>
 
-<br><br>
+<br>
 <% if can? :update, @tag %>
-  <%= link_to 'Edit', edit_tag_path(@tag), :class => "btn btn-warning" %>
+  <%= link_to 'Edit Tag', edit_tag_path(@tag), :class => "btn btn-warning" %>
 <% end %>
 
 <% if can? :destroy, @tag %>
-  <%= link_to 'Delete', tag_path(@tag), method: :delete, :class => "btn btn-danger" %>
+  <%= link_to 'Delete Tag', tag_path(@tag), method: :delete, :class => "btn btn-danger" %>
 <% end %>
