--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -41,6 +41,8 @@
   </div>
 <% end %>
 
+<%= will_paginate @questions, renderer: BootstrapPagination::Rails %>
+
 <br>
 <% if can? :update, @tag %>
   <%= link_to 'Edit Tag', edit_tag_path(@tag), :class => "btn btn-warning" %>
