Allow user to edit answer

--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -12,22 +12,22 @@
   <% end %>
 
 
-    <%= f.label :question_id %>
+    <!-- <%= f.label :question_id %>
     <%= f.text_field :question_id, class: "form-control" %><br>
 
 
     <%= f.label :user_id %>
-    <%= f.text_field :user_id, class: "form-control" %><br>
+    <%= f.text_field :user_id, class: "form-control" %><br> -->
 
     <%= f.label :content %>
     <%= f.text_area :content, class: "form-control" %><br>
 
-    <%= f.label :is_question %>
+    <!-- <%= f.label :is_question %>
     <%= f.check_box :is_question %> <br>
 
 
     <%= f.label :is_accepted %>
-    <%= f.check_box :is_accepted %> <br>
+    <%= f.check_box :is_accepted %> <br> -->
 
   <div class="actions">
     <%= f.submit class: "btn btn-primary" %>
