--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,12 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <%= link_to "Q-Board", root_path, id: "logo" %>
+    <ul class="nav navbar-nav navbar-left">
+      <li>
+        <%= link_to "Tags", tags_path %>
+      </li>
+    </ul>
+    
     <ul class="nav navbar-nav navbar-right">
 
       <% if user_signed_in? %>
