--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,5 @@
-<h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
+<% provide(:title, "Edit profile") %>
+<h2 class="text-center">Edit Profile</h2>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
