--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @tag.name) %>
 <h3>
   <span class="label label-default"><%= link_to @tag.name, @tag, class: "tags-text" %></span>
 </h3>
