--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,3 +1,14 @@
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Preview</h3>
+  </div>
+  <div class="panel-body">
+    <div id="targetDiv">
+
+    </div>
+  </div>
+</div>
+
 <%= form_for(@answer) do |f| %>
   <% if @answer.errors.any? %>
     <div id="error_explanation">
@@ -20,7 +31,7 @@
     <%= f.text_field :user_id, class: "form-control" %><br> -->
 
     <%= f.label :content %>
-    <%= f.text_area :content, class: "form-control" %><br>
+    <%= f.text_area :content, class: "form-control", id: "sourceTA", rows: "8" %><br>
 
     <!-- <%= f.label :is_question %>
     <%= f.check_box :is_question %> <br>
