--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,16 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.3.0/showdown.js"></script>
+    <script>
+      $('#sourceTA').on('input', function() {
+        var text = $('#sourceTA').val();
+        target = document.getElementById('targetDiv');
+        converter = new showdown.Converter();
+        html = converter.makeHtml(text);
+        target.innerHTML = html;
+      });
+    </script>
     <%= yield :js %>
   </body>
 </html>
