--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -25,7 +25,7 @@
       </div>
 
       <div class="media-body">
-        <%= @answer.content %>
+        <%= sanitize markdown(@answer.content) %>
         <br>
       </div>
 
@@ -67,7 +67,7 @@
           <% end %>
         </div>
         <div class="media-body">
-          <%= answer.content %>
+          <%= sanitize markdown(answer.content) %>
           <br><br>
           <p class="pull-right">Posted at: <%= answer.updated_at.strftime('%v') %></p>
           <% if can? :update, answer %>
@@ -116,14 +116,5 @@
       var question_id = "<%= params[:id] %>";
       $("#question_id").val(question_id);
     }
-
-    $('#sourceTA').on('input', function() {
-      var text = $('#sourceTA').val();
-      target = document.getElementById('targetDiv');
-      converter = new showdown.Converter();
-      html = converter.makeHtml(text);
-      target.innerHTML = html;
-    });
-
   </script>
 <% end %>
