--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.label :name %>
     <%= f.text_field :name, class: "form-control" %><br>
 
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit class: "btn btn-warning" %>
   </div>
 <% end %>
 <br>
