--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @room %> |
-<%= link_to 'Back', rooms_path %>
+<%= link_to 'Show', @room, :class => "btn btn-primary" %>
+<%= link_to 'Back', rooms_path, :class => "btn btn-success" %>
