--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @room.name) %>
 <h3>
-  <%= link_to @room.name, @room %>
+  <%= link_to @room.name.capitalize, @room %>
 </h3>
 <br>
 
