--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -4,7 +4,7 @@
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-body">
-          <h3><%= link_to room.name, room %></h3>
+          <h3><%= link_to room.name.capitalize, room %></h3>
           <% if can? :update, room %>
           <span><%= link_to 'Edit Room', edit_room_path(room), class: "btn btn-warning" %></span>
           <% end %>
